kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stand-deployment
  labels:
    app: stand
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stand
  template:
    metadata:
      labels:
        app: stand
    spec:
      containers:
      - name: app
        image: stand
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
