kubernetes/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: some-postgres
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
