kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stand-service
spec:
  type: LoadBalancer
  selector:
    app: stand
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
