kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stand-ingress
spec:
  rules:
  - host: "academy.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stand-service
            port:
              number: 80
